src/partials/elements/_slate.sass
@import ../../variables/elements/slate.variables
    
//*******************************//
//              Main
//*******************************//

.ts.slate
    position: relative
    
    display       : flex
    flex-direction: column
    align-items   : center
    
    padding      : $slate_padding
    border-radius: $slate_borderRadius
    
    background-color: $slate_backgroundColor
    color           : $slate_textColor

//-------------------//
//      Compact
//-------------------//

.ts.compact.slate
    display: inline-flex

//-------------------//
//       Header
//-------------------//

.ts.slate .header:not(.ts):not(.sub):not(.item)
    font-size  : $relativeHuge
    line-height: $relativeHuge
    font-weight: 500
    display    : block

//-------------------//
// Bolder & Thinner Header
//-------------------//

.ts.slate .bolder.header
    font-weight: bolder

.ts.slate .thinner.header
    font-weight: 400

//-------------------//
//    Description
//-------------------//

.ts.slate .description
    margin-top: $slate_descriptionMargin
    opacity   : $slate_descriptionOpacity
    display   : block

//-------------------//
//       Action
//-------------------//

.ts.slate .action
    margin-top: $slate_actionMargin

//-------------------//
//       Image
//-------------------//

.ts.slate .image
    left: 0
    top: 0
    right: 0
    bottom: 0
    overflow: hidden
    position: absolute

.ts.slate .image img
    width: 100%
    height: 100%
    object-fit: cover

.ts.slate .image ~ .header,
.ts.slate .image ~ .description
    color         : $slate_imageTextColor
    text-rendering: optimizelegibility
    text-shadow   : $slate_imageTextShadow

//-------------------//
//     Coupling
//-------------------//

.ts.slate .ts.container
    width: 100%

//-------------------//
//       Extra
//-------------------//

.ts.slate .extra
    margin-top: $slate_extraMargin
    opacity   : $slate_extraOpacity

//-------------------//
//       Icons
//-------------------//

.ts.slate .icons

/* Single Icon */
.ts.slate > .icon:not(.button),
.ts.slate > .icons > .icon
    font-size: $slate_iconSize
    margin   : 0

.ts.slate .icons:not(.symbol) + .description,
.ts.slate .icon:not(.symbol) + .description
    margin-top: $slate_headerMargin

.ts.slate .icons:not(.symbol) + .header,
.ts.slate .icon:not(.symbol) + .header
    margin-top: $slate_headerMargin
    
//-------------------//
//      Relaxed
//-------------------//

//.ts.relaxed.slate .icons:not(.symbol) + .header,
//.ts.relaxed.slate .icon:not(.symbol) + .header

//.ts.relaxed.slate .description

//.ts.relaxed.slate .action
 
    
//-------------------//
//    Faded Icons
//-------------------//

.ts.slate .faded.icons,
.ts.slate .faded.icon
    opacity: $slate_fadedIconOpacity
    
//-------------------//
//     Symbol Icon
//-------------------//

.ts.slate .symbol.icons
    display: flex
.ts.slate .symbol.icons .icon
    font-size: $slate_symbolIconSize

.ts.slate .symbol.icons,
.ts.slate .symbol.icon
    position : absolute
    right    : 0
    bottom   : 0
    font-size: $slate_symbolIconFontSize
    height   : $slate_symbolIconSize
    opacity  : $slate_symbolIconOpacity
    overflow : hidden
    
.ts.slate .symbol.icon
    width: $slate_symbolIconSize

//-------------------//
//      Heading
//-------------------//

.ts.heading.slate
    align-items: flex-start

.ts.heading.slate .header:not(.ts):not(.sub):not(.item)
    font-size: $relativeMassive

//-------------------//
//      Insetted
//-------------------//

.ts.insetted.slate
    box-shadow: $slate_insettedShadow

//-------------------//
//       Basic
//-------------------//

.ts.basic.slate
    background-color: transparent
    border          : $slate_basicBorder

//-------------------//
//       Dashed
//-------------------//

.ts.dashed.slate
    border: $slate_dashedBorder

//-------------------//
//     Borderless
//-------------------//

.ts.borderless.slate
    border: 0

//-------------------//
//      Centered
//-------------------//

.ts.centered.slate
    margin: 0 auto

//-------------------//
//       Fluid
//-------------------//

.ts.fluid.slate
    width        : 100%
    border-radius: 0

//-------------------//
//       Padded
//-------------------//

.ts.slate.padded
    padding: $slate_paddedPadding
.ts.slate.very.padded
    padding: $slate_veryPaddedPadding
.ts.slate.extra.padded
    padding: $slate_extraPaddedPadding

.ts.slate.padded[class*="horizontally padded"]
    padding: $slate_verticalPadding $slate_paddedPadding
.ts.slate.very.padded[class*="horizontally very padded"]
    padding: $slate_verticalPadding $slate_veryPaddedPadding
.ts.slate.extra.padded[class*="horizontally extra padded"]
    padding: $slate_verticalPadding $slate_extraPaddedPadding

.ts.slate.padded[class*="vertically padded"]
    padding: $slate_paddedPadding $slate_horizontalPadding
.ts.slate.very.padded[class*="vertically very padded"]
    padding: $slate_veryPaddedPadding $slate_horizontalPadding
.ts.slate.extra.padded[class*="vertically extra padded"]
    padding: $slate_extraPaddedPadding $slate_horizontalPadding

//-------------------//
//       Fitted
//-------------------//

.ts.slate.fitted.fitted:not([class*="horizontally fitted"]):not([class*="vertically fitted"])
    padding: 0
.ts.slate.horizontally.fitted[class*="horizontally fitted"]
    padding-left : 0
    padding-right: 0
.ts.slate.vertically.fitted[class*="vertically fitted"]
    padding-top   : 0
    padding-bottom: 0

//-------------------//
//      Disabled
//-------------------//

.ts.slate.disabled
    pointer-events: none
    opacity       : $disabledOpacity
    color         : $disabledTextColor

//-------------------//
//       Aligns
//-------------------//

.ts.slate[class*="left aligned"]
    align-items: flex-start
.ts.slate[class*="right aligned"]
    align-items: flex-end
.ts.slate[class*="center aligned"]
    align-items: center

//-------------------//
//     Clickable
//-------------------//

.ts.clickable.slate
    +extend(no-select)

.ts.clickable.slate:hover
    cursor: pointer

.ts.clickable.slate:not(.basic):hover
    background-color: $slate_clickableHoverBackgroundColor
.ts.clickable.slate:not(.basic):active
    background-color: $slate_clickableActiveBackgroundColor

/* Basic */
.ts.clickable.slate.basic:hover
    border-color: $slate_clickableBasicHoverBackgroundColor
.ts.clickable.slate.basic:active
    border-color: $slate_clickableBasicActiveBackgroundColor
    
//-------------------//
//        Sizes
//-------------------//

.ts.mini.slate
    font-size: $slate_miniFontSize
.ts.tiny.slate
    font-size: $slate_tinyFontSize
.ts.small.slate
    font-size: $slate_smallFontSize
.ts.medium.slate
    font-size: $slate_mediumFontSize
.ts.large.slate
    font-size: $slate_largeFontSize
.ts.big.slate
    font-size: $slate_bigFontSize
.ts.huge.slate
    font-size: $slate_hugeFontSize
.ts.massive.slate
    font-size: $slate_massiveFontSize

//-------------------//
//     Slate Menu
//-------------------//

.ts.slate .ts.menu[class*="bottom attached"]
    margin: $slate_verticalPadding -#{$slate_horizontalPadding} -#{$slate_verticalPadding} -#{$slate_horizontalPadding}
    width: calc(100% + #{$slate_horizontalPadding} * 2)
.ts.padded.padded.slate:not(.horizontally) .ts.menu[class*="bottom attached"]
    margin: $slate_paddedPadding -#{$slate_paddedPadding} -#{$slate_paddedPadding} -#{$slate_paddedPadding}
    width: calc(100% + #{$slate_paddedPadding} * 2)
.ts.very.padded.slate:not(.horizontally) .ts.menu[class*="bottom attached"]
    margin: $slate_veryPaddedPadding -#{$slate_veryPaddedPadding} -#{$slate_veryPaddedPadding} -#{$slate_veryPaddedPadding}
    width: calc(100% + #{$slate_veryPaddedPadding} * 2)
.ts.extra.padded.slate:not(.horizontally) .ts.menu[class*="bottom attached"]
    margin: $slate_extraPaddedPadding -#{$slate_extraPaddedPadding} -#{$slate_extraPaddedPadding} -#{$slate_extraPaddedPadding}
    width: calc(100% + #{$slate_extraPaddedPadding} * 2)

.ts.horizontally.padded.padded.slate .ts.menu[class*="bottom attached"]
    margin-left: -#{$slate_paddedPadding}
    margin-right: -#{$slate_paddedPadding}
    width: calc(100% + #{$slate_paddedPadding} * 2)
.ts.horizontally.very.padded.slate .ts.menu[class*="bottom attached"]
    margin-left: -#{$slate_veryPaddedPadding}
    margin-right: -#{$slate_veryPaddedPadding}
    width: calc(100% + #{$slate_veryPaddedPadding} * 2)
.ts.horizontally.extra.padded.slate .ts.menu[class*="bottom attached"]
    margin-left: -#{$slate_extraPaddedPadding}
    margin-right: -#{$slate_extraPaddedPadding}
    width: calc(100% + #{$slate_extraPaddedPadding} * 2)

// TODO
.ts.slate .ts.menu[class*="bottom attached"]:not(.secondary):not(.pointing)
    margin-bottom: calc(-#{$slate_verticalPadding} + -1px)

//-------------------//
//     Coupling
//-------------------//

//.ts.slate > .ts.menu > .ts.container
//    display       : flex
//    flex-direction: column
.ts.slate:not(.heading) > .ts.container
    align-items: center

.ts.slate ~ .ts.segment[class*="bottom attached"]
    border-top: 0

